align content / fix space

--- a/style.css
+++ b/style.css
@@ -40,3 +40,31 @@ body {
   bottom: 0;
 }
 
+.container form .user-details {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px 0 12px 0;
+}
+
+.container form .user-details .input-box {
+  margin-bottom: 15px;
+  width: calc(100% / 2 - 20px);
+}
+
+.user-details .input-box .details{
+  font-weight: 500;
+  display: block;
+  margin-bottom:5px;
+}
+
+.container .user-details .input-box input {
+  height: 40px;
+  width: 100%;
+  border-radius: 5px;
+  outline: none;
+  border: 1px solid #ccc;
+  padding-left: 10px;
+  font-size: 14px;
+}
+
